<resources>
    <string name="app_name">CostControl</string>
    <string name="logoDescription">Logomarca da empresa</string>
    <string name="email">E-Mail</string>
    <string name="senha">Senha</string>
    <string name="emailPlaceholder">Preencha o seu e-mail…</string>
    <string name="senhaPlaceholder">Preencha a sua senha…</string>
    <string name="nomeViagem">Preencha o nome do destino…</string>
    <string name="login">LOGIN</string>
    <string name="lembrarLogin">Lembrar login</string>
    <string name="criarConta">CRIAR CONTA</string>
    <string name="resetarSenha">RESETAR SENHA</string>
    <string name="repitaEmail">Repita seu E-Mail</string>
    <string name="repitaSenha">Repita sua Senha</string>
    <string name="repitaEmailPlaceholder">Repita seu e-mail…</string>
    <string name="repitaSenhaPlaceholder">Repita sua senha…</string>
    <string name="novaViagem">CRIAR VIAGEM</string>
    <string name="viagens">Viagens</string>
    <string name="buttonCriarViagem">Botao para criar viagem.</string>
    <string name="viajantes">Viajantes</string>
    <string name="precoporpessoa">Preço por pessoa</string>
    <string name="duracao">Duração</string>
    <string name="precototal">Preço total</string>
    <string name="excluirviajem">Excluir viajem</string>
    <string name="editarviajem">Editar viajem</string>
    <string name="salvar">SALVAR</string>
    <string name="destino">Destino</string>
    <string name="configuracoesgerais">CONFIGURAÇÕES GERAIS</string>
    <string name="destinoPlaceholder">Preencha o nome do destino…</string>
    <string name="numeroViajantes">Número de viajantes</string>
    <string name="numeroViajantesPlaceholder">Preencha o número de viajantes…</string>
    <string name="duracaoDias">Duração em dias</string>
    <string name="duracaoDiasPlaceholder">Preencha o número de dias…</string>
    <string name="combustivel">COMBUSTÍVEL</string>
    <string name="combustivelDescription">Ícone para combustível</string>
    <string name="configuracoesgeraisDescription">Ícone para configurações gerais</string>
    <string name="tarifaAerea">TARIFA AÉREA</string>
    <string name="tarifaAereaDescription">Ícone para tarifa aérea</string>
    <string name="refeicoes">REFEIÇÕES</string>
    <string name="refeicoesDescription">Ícone para refeições</string>
    <string name="hospedagem">HOSPEDAGEM</string>
    <string name="hospedagemDescription">Ícone para hospedagem</string>
    <string name="entretenimento">ENTRETENIMENTO</string>
    <string name="entretenimentoDescription">Ícone para entretenimento</string>
    <string name="criarNovaViagem">Criar nova viagem</string>
    <string name="totalEstimadoQuilometros">Total estimado de quilômetros</string>
    <string name="mediaQuilometrosLitro">Média de quilômetros por litro</string>
    <string name="custoMedioLitro">Custo médio por litro</string>
    <string name="totalVeiculos">Total de veículos</string>
    <string name="incluir">INCLUIR</string>
    <string name="custoEstimadoPessoa">Custo estimado por pessoa</string>
    <string name="aluguelVeiculo">Aluguel de veículo</string>
    <string name="custoEstimadoRefeicao">Custo estimado por refeição</string>
    <string name="refeicoesDia">Refeições por dia</string>
    <string name="custoMedioNoite">Custo médio (por noite)</string>
    <string name="totalNoites">Total de noites</string>
    <string name="totalQuartos">Total de quartos</string>
    <string name="totalEstimadoQuilometrosPlaceholder">Preencha o total estimado…</string>
    <string name="mediaQuilometrosLitroPlaceholder">Preencha a média de quilômetros…</string>
    <string name="custoMedioLitroPlaceholder">Preencha o custo médio…</string>
    <string name="totalVeiculosPlaceholder">Preencha o total…</string>
    <string name="custoEstimadoPessoaPlaceholder">Preencha o custo estimado…</string>
    <string name="aluguelVeiculoPlaceholder">Preencha o custo do aluguel…</string>
    <string name="custoEstimadoRefeicaoPlaceholder">Preencha o custo estimado…</string>
    <string name="refeicoesDiaPlaceholder">Preencha as refeições…</string>
    <string name="custoMedioNoitePlaceholder">Preencha o custo médio…</string>
    <string name="totalNoitesPlaceholder">Preencha o total…</string>
    <string name="totalQuartosPlaceholder">Preencha o total…</string>
    <string name="nomeEntretenimento">Nome</string>
    <string name="precoEntretenimento">Preço</string>
    <string name="adicionar">ADICIONAR</string>
    <string name="nomeEntretenimentoPlaceholder">Nome…</string>
    <string name="precoEntretenimentoPlaceholder">Preço…</string>
    <string name="totalReais">TOTAL:  R$ </string>
    <string name="custo">CUSTO:</string>
    <string name="rs">R$</string>
    <string name="custoTotal">CUSTO TOTAL:</string>
    <string name="zeroValue">0,00</string>
    <string name="atualizar">ATUALIZAR</string>
    <string name="close">Fechar</string>
    <string name="updateTripsBtn">Botão para atualizar lista de viagens</string>
</resources>