<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAccountActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/backgroundBlue"
        tools:ignore="UselessParent"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="275dp"
            android:src="@drawable/costcontrolbackground"
            android:contentDescription="@string/logoDescription"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            >
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/surfaceWhite"
            android:text="@string/email"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry"
                />
            <EditText
                android:id="@id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/emailPlaceholder"
                android:background="@drawable/custominputbackground"
                android:padding="10dp"
                android:layout_marginBottom="15dp"
                android:autofillHints="emailAddress"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/surfaceWhite"
                android:text="@string/repitaEmail"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry"
                />
            <EditText
                android:id="@id/repeatEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/repitaEmailPlaceholder"
                android:background="@drawable/custominputbackground"
                android:padding="10dp"
                android:layout_marginBottom="15dp"
                android:autofillHints="emailAddressPla"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/surfaceWhite"
                android:text="@string/senha"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry"
                />
            <EditText
                android:id="@id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/senhaPlaceholder"
                android:background="@drawable/custominputbackground"
                android:padding="10dp"
                android:layout_marginBottom="15dp"
                android:autofillHints="password"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/surfaceWhite"
                android:text="@string/repitaSenha"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry"
                />
            <EditText
                android:id="@id/repeatPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/repitaSenhaPlaceholder"
                android:background="@drawable/custominputbackground"
                android:padding="10dp"
                android:layout_marginBottom="15dp"
                android:autofillHints="password"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@id/createAccountBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/criarConta"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/surfaceWhite"
                android:background="@drawable/customorangebutton"
                android:layout_marginBottom="15dp"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>