<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Trips">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundBlue"
        android:orientation="vertical"
        android:padding="30dp"
        android:weightSum="20"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/viagens"
            android:textColor="@color/surfaceWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/customyellowbutton"
                    android:baselineAligned="false"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:weightSum="2">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textColor="@color/surfaceWhite"
                        android:text="Destino"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.7"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Viajantes"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="5"
                                android:textColor="@color/surfaceOrange"
                                android:textSize="26sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.3"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Preço por pessoa"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="R$ 350,00"
                                android:textColor="@color/surfaceOrange"
                                android:textSize="26sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                        <ImageButton
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:layout_margin="5dp"
                            android:src="@drawable/settings_24px"
                            android:background="@drawable/customorangebutton"
                            app:tint="@color/surfaceWhite" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.7"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Duração"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="6 dias"
                                android:textColor="@color/surfaceOrange"
                                android:textSize="26sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.3"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Preço total"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="R$ 1750,00"
                                android:textColor="@color/surfaceOrange"
                                android:textSize="26sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                        <ImageButton
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:layout_margin="5dp"
                            android:src="@drawable/delete_24px"
                            android:background="@drawable/customorangebutton"
                            app:tint="@color/surfaceWhite" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="100dp"
                    android:text="TESTE" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="100dp"
                    android:text="TESTE" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="100dp"
                    android:text="TESTE" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="100dp"
                    android:text="TESTE" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:gravity="bottom"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/novaViagem"
                    android:textColor="@color/surfaceWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="travel"
                    android:background="@drawable/custominputbackground"
                    android:hint="@string/nomeViagem"
                    android:inputType="text"
                    android:padding="10dp" />
            </LinearLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custominputbackground"
                android:backgroundTint="@color/surfaceOrange"
                android:contentDescription="@string/buttonCriarViagem"
                android:maxWidth="15dp"
                android:maxHeight="15dp"
                android:src="@drawable/twotone_add_24" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>